# MoppyAndroid

./: .gitignore  README.md  allclasses-frame.html  allclasses-noframe.html  build.gradle  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  privacy-policy  serialized-form.html  settings.gradle
app/: CMakeLists.txt  build.gradle
app/resources/icon/: Icon-orig.xcf  Icon.xcf
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JNIConverter.h  MoppyAndroid.cpp  native-lib.cpp
app/src/main/java/com/example/moppyandriod/: MainActivity.java  Test.cpp
app/src/main/java/com/moppyandroid/main/: BrowserActivity.java  BrowserAdapter.java  DeviceAdapter.java  DeviceSelectorDialog.java  DeviceSelectorDialogManager.java  FragmentCollectionAdapter.java  LibraryAdapter.java  MIDILibrary.java  MainActivity.java  MidiLibrary.java  (+9 more)
app/src/main/res/drawable-anydpi/: ic_album.xml  ic_folder.xml  ic_info.xml  ic_musicfile.xml  ic_next.xml  ic_notification.xml  ic_pause.xml  ic_play.xml  ic_prev.xml  ic_stop.xml  ic_usb.xml
app/src/main/res/layout/: activity_browser.xml  activity_main.xml  browser_entry_layout.xml  device_entry_layout.xml  fragment_sequencer.xml  library_cell_layout.xml  loading_dialog_layout.xml  main_layout.xml  path_cell_layout.xml  queue_entry_layout.xml  selector_dialog_layout.xml  slide_layout.xml  slider_root_layout.xml
app/src/main/res/values/: colors.xml  dimensions.xml  strings.xml  styles.xml
app/src/main/res/xml/: midi_service_info.xml
(+547 files in other folders)
